Overflow name fix - https://expressly.githost.io/expresslydev/expressly-app-portal/issues/459

--- a/lightbox/css/style-local.css
+++ b/lightbox/css/style-local.css
@@ -142,6 +142,7 @@ div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-subscribe {
   padding-bottom: 10px;
   padding-left: 12px;
   text-indent: -12px;
+  padding-top: 5px;
 }
 
 div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-subscribe input, div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-subscribe label span {
@@ -192,13 +193,26 @@ div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms {
 
 div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms .xly-policy {
   text-align: left;
-  width: 100%;
-  overflow: hidden;
+  max-width: 170px;
   font-size: 10px;
   line-height: 12px;
-  /* margin-left: 43px; */
   color: #b3b3b3;
   margin-top: 9px;
+}
+
+div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms .xly-policy .xly-not-name{
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 52px;
+  position: relative;
+  top: 3px;
+}
+div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms .xly-policy .xly-not-name a {
+  font-size: 10px;
+  color: #b3b3b3;
+  font-weight: normal;
 }
 
 div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms .xly-policy>a {
@@ -299,16 +313,22 @@ div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms .
     margin-top: 0;
   }
   div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms .xly-policy {
-    margin-top: 9px!important;
-    margin-bottom: 7px!important;
     text-align: center;
     line-height: 13px!important;
+    margin: 5 auto;
   }
   div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-subscribe {
     padding-bottom: 0px!important;
     padding-top: 5px!important;
   }
-
+  div.xly.xly-popup>div.xly.xly-container>div.xly.xly-row .xly-footer .xly-terms .xly-policy .xly-not-name{
+    display: inline-block;
+    text-align: center;
+    overflow: visible;
+    max-width: 100%;
+    position: relative;
+    top: 0px;
+  }
 }
 
 @media (max-width: 420px) {
